# SharkyPresence

./: .gitignore  MANIFEST.in  README.md  discord_status.py  exceptions.py  make.bat  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: code_bug.md  config.yml  feature_request.md
data/: example_settings.json
presence/: discord_status.py  exceptions.py  presenceGUI.py
presence/data/: settings.pickle
src/presence/: __main__.py
src/sharkypresence/: __main__.py
