[metadata]
name = SharkyPresence
version = 1.0.0
description = Yes
author = SharkyTheKing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires =
    setuptools
install_requires =
    pypresence==4.2.0
[options.entry_points]
console_scripts =
    sharkypresence=presence.__main__:main

[options.packages.find]
where = src
include =
    presence
    presence.*
